[package]
name = "veax-dex"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# these features exist only as markers since code is feature-gated ATM
# not intended to be disabled or whatever
default = ["near"]
near = []
test-utils = ["near", "dep:scopeguard"]
smartlib = ["near", "serde/derive"]
smart-routing = ["near"]

[dependencies]
uint = { version = "0.9.3", default-features = false }
serde = "1.0.138"
serde_json = "1.0.82"
thiserror = "1.0.31"
# feature "near"
near-sdk = { version = "=4.0.0" } # careful with this one: this must be aligned with ../dex-smart-trading
near-contract-standards = { version = "=4.0.0" }
near-iterable-maps = { path = "../near-iterable-maps" }
itertools = "0.10.4"
num-traits = "0.2.15"
typed-index-collections = "3.1.0"
bitvec = "1.0.1"
paste = "1.0.9"
strum = "0.24.1"
strum_macros = "0.24.3"
static_assertions = "1.1.0"
scopeguard = { version = "1.1.0", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
rand = "0.8"
rand_pcg = "0.3"
rstest = "0.16.0"
float_extras = "0.1.6"
scopeguard = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rug = "1.18.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks=true

[build-dependencies.gen-source-files-list]
path = "../../common/gen-source-files-list"

[build-dependencies.ver-from-git]
path = "../../common/ver-from-git"
